@@ -13,9 +13,10 @@ package org.junit.platform.commons.util;
 import static java.time.Duration.ofMillis;
 import static java.util.Arrays.stream;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -67,6 +68,7 @@ import org.junit.jupiter.api.io.TempDir;
 import org.junit.platform.commons.JUnitException;
 import org.junit.platform.commons.PreconditionViolationException;
 import org.junit.platform.commons.logging.LogRecordListener;
+import org.junit.platform.commons.support.Resource;
 import org.junit.platform.commons.test.TestClassLoader;
 import org.junit.platform.commons.util.ReflectionUtilsTests.NestedClassTests.ClassWithNestedClasses.Nested1;
 import org.junit.platform.commons.util.ReflectionUtilsTests.NestedClassTests.ClassWithNestedClasses.Nested2;
@@ -559,6 +561,7 @@ class ReflectionUtilsTests {
 			// Wrappers to Primitives
 			assertTrue(ReflectionUtils.isAssignableTo(Integer.class, int.class));
 			assertTrue(ReflectionUtils.isAssignableTo(Boolean.class, boolean.class));
+			assertTrue(ReflectionUtils.isAssignableTo(Void.class, void.class));
 
 			// Widening Conversions from Wrappers to Primitives
 			assertTrue(ReflectionUtils.isAssignableTo(Integer.class, long.class));
@@ -710,6 +713,47 @@ class ReflectionUtilsTests {
 	}
 
 	@Nested
+	class ResourceLoadingTests {
+
+		@Test
+		void tryToGetResourcePreconditions() {
+			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToGetResources(""));
+			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToGetResources("   "));
+
+			assertThrows(PreconditionViolationException.class, () -> ReflectionUtils.tryToGetResources(null));
+			assertThrows(PreconditionViolationException.class,
+				() -> ReflectionUtils.tryToGetResources("org/junit/platform/commons/example.resource", null));
+		}
+
+		@Test
+		void tryToGetResource() {
+			var tryToGetResource = ReflectionUtils.tryToGetResources("org/junit/platform/commons/example.resource");
+			var resource = assertDoesNotThrow(tryToGetResource::get);
+			assertAll( //
+				() -> assertThat(resource).hasSize(1), //
+				() -> assertThat(resource).extracting(Resource::getName) //
+						.containsExactly("org/junit/platform/commons/example.resource"));
+		}
+
+		@Test
+		void tryToGetResourceWithPrefixedSlash() {
+			var tryToGetResource = ReflectionUtils.tryToGetResources("/org/junit/platform/commons/example.resource");
+			var resource = assertDoesNotThrow(tryToGetResource::get);
+			assertAll( //
+				() -> assertThat(resource).hasSize(1), //
+				() -> assertThat(resource).extracting(Resource::getName) //
+						.containsExactly("org/junit/platform/commons/example.resource"));
+		}
+
+		@Test
+		void tryToGetResourceWhenResourceNotFound() {
+			var tryToGetResource = ReflectionUtils.tryToGetResources("org/junit/platform/commons/no-such.resource");
+			var resource = assertDoesNotThrow(tryToGetResource::get);
+			assertThat(resource).isEmpty();
+		}
+	}
+
+	@Nested
 	class ClassLoadingTests {
 
 		@Test
@@ -759,6 +803,7 @@ class ReflectionUtilsTests {
 		@Test
 		void tryToLoadClass() {
 			assertThat(ReflectionUtils.tryToLoadClass(Integer.class.getName())).isEqualTo(success(Integer.class));
+			assertThat(ReflectionUtils.tryToLoadClass(Void.class.getName())).isEqualTo(success(Void.class));
 		}
 
 		@Test
@@ -770,6 +815,7 @@ class ReflectionUtilsTests {
 		@Test
 		void tryToLoadClassForPrimitive() {
 			assertThat(ReflectionUtils.tryToLoadClass(int.class.getName())).isEqualTo(success(int.class));
+			assertThat(ReflectionUtils.tryToLoadClass(void.class.getName())).isEqualTo(success(void.class));
 		}
 
 		@Test
@@ -1642,7 +1688,7 @@ class ReflectionUtilsTests {
 			// @formatter:off
 			return methods.stream()
 					.map(m -> String.format("%s(%s)", m.getName(), ClassUtils.nullSafeToString(m.getParameterTypes())))
-					.collect(toList());
+					.toList();
 			// @formatter:on
 		}
 
